[gd_scene load_steps=7 format=2]

[ext_resource path="res://entities/rescuesub.png" type="Texture" id=1]
[ext_resource path="res://entities/DISSUB2.png" type="Texture" id=2]
[ext_resource path="res://levels/Intro.gd" type="Script" id=3]
[ext_resource path="res://SFX/waveslap_second.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "FadeIn"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 60, 40 ), Vector2( 240, 160 ), Vector2( 360, 240 ), Vector2( 540, 380 ), Vector2( 1024, 600 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 512, 300 ), Vector2( 482, 280 ), Vector2( 392, 220 ), Vector2( 332, 180 ), Vector2( 242, 110 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("bkgd:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[node name="Intro" type="Node2D"]
script = ExtResource( 3 )

[node name="TransitionIn" type="CanvasLayer" parent="."]

[node name="bkgd" type="ColorRect" parent="TransitionIn"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.00392157, 0.00784314, 0.0196078, 0.901961 )

[node name="ColorRect" type="ColorRect" parent="TransitionIn"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 512.0
margin_top = 300.0
margin_right = 512.0
margin_bottom = 300.0
mouse_filter = 2
color = Color( 0.0470588, 0.0431373, 0.337255, 1 )

[node name="Anims" type="AnimationPlayer" parent="TransitionIn"]
autoplay = "FadeIn"
anims/FadeIn = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
rect_min_size = Vector2( 1024, 600 )
mouse_filter = 2
color = Color( 0.0313726, 0.0156863, 0.27451, 1 )

[node name="GameTitle" type="RichTextLabel" parent="ColorRect"]
self_modulate = Color( 0.898039, 0.890196, 0.890196, 1 )
anchor_left = 0.276
anchor_top = 0.035
anchor_right = 0.757
anchor_bottom = 0.302
margin_left = 0.375977
margin_right = -369.168
margin_bottom = -120.2
rect_scale = Vector2( 4, 4 )
size_flags_horizontal = 2
size_flags_vertical = 2
bbcode_enabled = true
bbcode_text = "
[wave amp=50 freq=2][b][color=aqua]Submarine Rescue[/color][/b][/wave]"
meta_underlined = false
text = "
Submarine Rescue"
scroll_active = false

[node name="Options" type="Button" parent="."]
margin_left = 704.0
margin_top = 320.0
margin_right = 832.0
margin_bottom = 384.0
focus_neighbour_left = NodePath(".")
focus_next = NodePath("../StartRescue")
focus_previous = NodePath("../StartRescue")
focus_mode = 1
action_mode = 0
enabled_focus_mode = 1
text = "Options"

[node name="StartRescue" type="Button" parent="."]
margin_left = 192.0
margin_top = 320.0
margin_right = 320.0
margin_bottom = 384.0
focus_neighbour_right = NodePath("../Options")
focus_next = NodePath("../Options")
focus_previous = NodePath("../Options")
focus_mode = 1
enabled_focus_mode = 1
text = "Start Rescue"

[node name="Sub" type="Sprite" parent="."]
position = Vector2( 512, 448 )
texture = ExtResource( 2 )

[node name="RescueVessel" type="Sprite" parent="."]
position = Vector2( 522, 265 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="introaudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="pressed" from="Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="StartRescue" to="." method="_on_Start_Rescue_pressed"]
